--- a/lang/zh-HK/json.json
+++ b/lang/zh-HK/json.json
@@ -88,6 +88,11 @@
       "valid": "JSON 有效",
       "validate": "驗證",
       "validating": "正在驗證..."
-    }
+    },
+    "tryNow": "立即嘗試",
+    "title": "JSON 工具",
+    "openSource": "開源",
+    "description": "JSON 資料工具",
+    "free": "自由的"
   }
 }
