--- a/lang/zh-HK/converters.json
+++ b/lang/zh-HK/converters.json
@@ -5,6 +5,7 @@
       "copy": "複製",
       "decode": "解碼",
       "description": "將 Base64 轉換為其他格式",
+      "download": "下載",
       "encode": "編碼",
       "error": {
         "empty": "輸入不能為空",
@@ -24,9 +25,9 @@
       "uploadFile": "上傳文件",
       "urlSafe": "URL-safe 編碼 (將 + 替換為 - 和 / 替換為 _)"
     },
-    "openSource": "開源",
     "description": "用於在不同格式之間轉換資料的工具",
     "free": "自由的",
+    "openSource": "開源",
     "title": "轉換器",
     "tryNow": "立即嘗試"
   }
