--- a/lang/zh-HK/common.json
+++ b/lang/zh-HK/common.json
@@ -37,8 +37,8 @@
       "dev": {
         "description": "開發者實用工具和格式化工具",
         "regex": {
-          "description": "測試和驗證正則表達式",
-          "title": "正則表達式測試工具"
+          "description": "測試和驗證Regex",
+          "title": "Regex測試工具"
         },
         "title": "開發工具"
       },
