--- a/lang/en/common.json
+++ b/lang/en/common.json
@@ -15,7 +15,8 @@
     "rocksDevTools": "RocksDev.Tools",
     "starOnGitHub": "Star on GitHub",
     "tools": "tools",
-    "tryNow": "Try Now"
+    "tryNow": "Try Now",
+    "productHunt": "🎉 We're live on Product Hunt! Support us with your feedback"
   },
   "nav": {
     "back": "back",
