--- a/lang/zh-CN/common.json
+++ b/lang/zh-CN/common.json
@@ -15,7 +15,8 @@
     "rocksDevTools": "RocksDev.工具",
     "starOnGitHub": "在 GitHub 上点赞",
     "tools": "工具",
-    "tryNow": "立即试用"
+    "tryNow": "立即试用",
+    "productHunt": "🎉 我们上线了 Product Hunt！支持我们并给我们反馈"
   },
   "nav": {
     "back": "返回",
