--- a/lang/zh-HK/common.json
+++ b/lang/zh-HK/common.json
@@ -15,7 +15,8 @@
     "rocksDevTools": "RocksDev.工具",
     "starOnGitHub": "在 GitHub 上點贊",
     "tools": "工具",
-    "tryNow": "立即試用"
+    "tryNow": "立即試用",
+    "productHunt": "🎉 我們上線了 Product Hunt！支持我們並給我們反饋"
   },
   "nav": {
     "back": "返回",
