--- a/lang/en/converters.json
+++ b/lang/en/converters.json
@@ -27,6 +27,30 @@
     },
     "description": "Tools for converting data between different formats",
     "free": "Free",
+    "md2html": {
+      "actions": {
+        "clear": "Clear",
+        "convert": "Convert to HTML",
+        "copy": "Copy HTML",
+        "loadSample": "Load Sample"
+      },
+      "converting": "Converting...",
+      "description": "Convert Markdown to HTML",
+      "input": {
+        "placeholder": "Enter your markdown here...",
+        "title": "Markdown Input"
+      },
+      "output": {
+        "html": "HTML",
+        "preview": "Preview",
+        "title": "HTML Output"
+      },
+      "title": "Markdown to HTML Converter",
+      "toast": {
+        "converted": "Conversion complete",
+        "copied": "Copied to clipboard"
+      }
+    },
     "openSource": "Open Source",
     "title": "Converters",
     "tryNow": "Try Now"
