--- a/lang/zh-CN/converters.json
+++ b/lang/zh-CN/converters.json
@@ -49,6 +49,9 @@
       "toast": {
         "converted": "轉換完成",
         "copied": "已複製到剪貼簿"
+      },
+      "tooltip": {
+        "preview": "預覽樣式可能與您的網站樣式不同，因為它使用的是預設的 GitHub 樣式。HTML 輸出可以根據您的需求進行樣式化。"
       }
     },
     "openSource": "開源",
