--- a/lang/zh-HK/seo.json
+++ b/lang/zh-HK/seo.json
@@ -2,6 +2,110 @@
   "seo": {
     "description": "優化您網站搜索引擎可見性的工具",
     "free": "免費",
+    "meta-tags": {
+      "advanced": {
+        "canonical-url": "規範網址",
+        "canonical-url-placeholder": "輸入規範網址",
+        "keywords": "關鍵字標籤",
+        "keywords-description": "雖然在現今的搜索引擎優化中不太重要，但某些搜索引擎仍然使用關鍵字。使用此欄位包含您頁面的相關關鍵字。",
+        "keywords-placeholder": "輸入關鍵字（以逗號分隔）",
+        "robots": "機器人指令",
+        "robots-index-follow": "索引，跟隨",
+        "robots-index-nofollow": "索引，不跟隨",
+        "robots-noindex-follow": "不索引，跟隨",
+        "robots-noindex-nofollow": "不索引，不跟隨",
+        "robots-placeholder": "選擇機器人指令",
+        "tooltips": {
+          "canonical-url-description": "當相似內容存在於多個網址時，指定首選版本。有助於防止重複內容問題。",
+          "keywords-description": "雖然在現今的搜索引擎優化中不太重要，但某些搜索引擎仍然使用關鍵字。使用此欄位包含您頁面的相關關鍵字。",
+          "robots-description": "控制搜索引擎如何爬取和索引您的頁面。「索引，跟隨」允許索引和跟隨鏈接。"
+        }
+      },
+      "basic": {
+        "canonical-url": "規範網址",
+        "keywords": "關鍵字",
+        "meta-description": "Meta 描述",
+        "meta-description-description": "頁面內容的簡短摘要。這會顯示在搜索結果的標題下方。",
+        "meta-description-placeholder": "輸入您的頁面描述",
+        "recommended-characters": "建議：{min}-{max} 個字符",
+        "robots": "機器人",
+        "title-tag": "標題標籤",
+        "title-tag-description": "標題標籤對SEO至關重要。它會顯示在搜索結果和瀏覽器標籤中。",
+        "title-tag-placeholder": "輸入您的頁面標題",
+        "viewport": "視口"
+      },
+      "browser-content-area": "瀏覽器內容區域",
+      "browser-tab": "瀏覽器標籤",
+      "characters": "字符",
+      "copy": "複製",
+      "description": "生成網站的 meta 標籤",
+      "facebook-preview": "Facebook 預覽",
+      "no-image-provided": "未提供圖片",
+      "optimal": "最佳",
+      "preview": "預覽",
+      "recommended": "建議",
+      "recommended-image-dimensions-fb": "建議：1200×630 像素（1.91:1 寬高比）",
+      "recommended-image-dimensions-twitter-144": "建議：144×144 像素",
+      "recommended-image-dimensions-twitter-1200": "建議：1200×628 像素",
+      "search-result": "搜索結果",
+      "social": {
+        "card-type": "卡片類型",
+        "card-type-app": "應用程式",
+        "card-type-placeholder": "選擇卡片類型",
+        "card-type-player": "播放器",
+        "card-type-summary": "摘要",
+        "card-type-summary-large-image": "大圖摘要",
+        "og-description": "OG 描述",
+        "og-description-placeholder": "輸入您的頁面描述",
+        "og-image": "OG 圖片網址",
+        "og-image-placeholder": "輸入圖片網址 (https://...)",
+        "og-title": "OG 標題",
+        "og-title-placeholder": "輸入您的頁面標題",
+        "og-type": "OG 類型",
+        "og-type-article": "文章",
+        "og-type-placeholder": "選擇類型",
+        "og-type-product": "產品",
+        "og-type-profile": "個人檔案",
+        "og-type-website": "網站",
+        "og-url": "OG 網址",
+        "og-url-placeholder": "輸入規範網址",
+        "title-facebook": "Open Graph (Facebook)",
+        "tooltips": {
+          "card-type-description": "決定您的內容在 Twitter 上的顯示方式。摘要卡片包含小圖片，而大圖摘要卡片則顯示突出的圖片。",
+          "max-file-size": "最大檔案大小：8MB",
+          "minimum-image-dimensions": "最小尺寸：600×315 像素",
+          "og-description-description": "內容的簡短描述，通常在2到4句之間。這將顯示在標題下方。",
+          "og-image-description": "您頁面預覽圖片的網址。",
+          "og-title-description": "您文章的標題，不包含任何品牌名稱。保持簡短和吸引人。",
+          "og-type-description": "您的內容類型。這會影響您的內容在 Facebook 動態消息中的顯示方式。預設為「網站」。",
+          "og-url-description": "您頁面的規範網址。這應該是沒有會話變量或參數的原始網址。",
+          "recommended-image-dimensions": "建議尺寸：1200×630 像素（1.91:1 寬高比）",
+          "reference": "參考",
+          "reference-link-fb": "Facebook 分享指南",
+          "reference-link-x": "卡片標記參考",
+          "sample-fb": "在 Facebook 上分享時內容的顯示範例：",
+          "supported-formats": "支援格式：JPG、PNG、GIF",
+          "twitter-card-description": "在 X (Twitter) 上分享時內容的顯示範例："
+        },
+        "twitter-card": "Twitter 卡片",
+        "twitter-image": "Twitter 圖片網址",
+        "twitter-image-placeholder": "輸入圖片網址",
+        "twitter-title": "Twitter 標題",
+        "twitter-title-placeholder": "輸入 Twitter 標題"
+      },
+      "social-share": "社交分享",
+      "tab": {
+        "advanced": "進階",
+        "basic": "基本 SEO",
+        "social": "社交媒體"
+      },
+      "title": "Meta 標籤生成器",
+      "twitter-preview": "Twitter 預覽",
+      "via": "來自",
+      "your-page-description": "您的頁面描述",
+      "your-page-description-placeholder": "您的頁面描述將顯示在這裡。讓它更吸引人以提高點擊率。",
+      "your-page-title": "您的頁面標題"
+    },
     "og-image": {
       "description": "創建完美的社交媒體分享圖片。支持批量處理、自定義尺寸和裁剪。",
       "download": {
